# board_games_ai

./: .gitignore  README.md  extract_model.py  pyproject.toml  run_train.sh  setup.py
src/cublino_contra/: __init__.py  env.py  mcts.py  model.py  play.py  train.py
src/cublino_contra/mcts_cpp/: mcts.cpp
src/tic_tac_toe_bolt/: __init__.py  env.py  mcts.py  model.py  play.py  play_match.py  train.py
src/tic_tac_toe_bolt/mcts_cpp/: mcts.cpp
tests/: performance_benchmark.py  random_agent.py  test_cublino.py  test_cublino_ai.py  test_draw.py  test_history.py  test_human_moves.py  test_import.py  test_mcts_cpp.py  test_mechanics.py  test_model.py  test_random_initialization.py  verify_cublino_mcts_logic.py
