[project]
name = "tic-tac-toe-bolt"
version = "0.1.0"
description = "Infinite Tic Tac Toe Gymnasium Environment with AlphaZero-style AI"
dependencies = [
    "gymnasium",
    "numpy",
    "pygame",
    "torch"
]

[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"
